--- a/style.css
+++ b/style.css
@@ -1,11 +1,41 @@
+* {
+    box-sizing: border-box;
+  }
+  
+body {
+    background-color: #ab7c61;
+    font-family: Arial, Helvetica, sans-serif;
+}
+body header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 2rem 3rem 0rem 3rem;
+    
+}
 h1 {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-size: 5rem;
 }
 h2 {
     text-align: center;
 }
 .percha {
     width: 30px;
+    
 
+}
+.logo {
+    width: 250px;
+}
+.home {
+    color: antiquewhite;
+    text-decoration: none;
+    padding: 0rem 1rem 0rem 1rem;
+   
+}
+.container {
+    display: flex;
+    justify-content: space-between;
 }
 
