--- a/style.css
+++ b/style.css
@@ -1,41 +1,56 @@
 * {
     box-sizing: border-box;
-  }
-  
+}
+
 body {
-    background-color: #ab7c61;
+    background-color: rgb(148, 177, 148);
     font-family: Arial, Helvetica, sans-serif;
 }
+
 body header {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     padding: 2rem 3rem 0rem 3rem;
-    
+
 }
+
 h1 {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 5rem;
+    color: rgb(16, 55, 36)
 }
+
 h2 {
     text-align: center;
+    color: rgb(16, 55, 36)
 }
-.percha {
-    width: 30px;
-    
+
+h3 {
+    color: rgb(16, 55, 36)
+}
+
+p { text-align: justify;
+    color: rgb(16, 55, 36)
 
 }
+
+.percha {
+    width: 30px;
+
+
+}
+
 .logo {
     width: 250px;
 }
 .home {
-    color: antiquewhite;
-    text-decoration: none;
+    color: rgb(16, 55, 36)
     padding: 0rem 1rem 0rem 1rem;
-   
+
 }
+
 .container {
     display: flex;
     justify-content: space-between;
 }
-
