--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap');
 * {
     box-sizing: border-box;
+
   }
   
 body {
-    background-color: #ab7c61;
+    background-color: #c57667;
     font-family: Arial, Helvetica, sans-serif;
 }
 body header {
@@ -19,23 +21,168 @@ h1 {
 }
 h2 {
     text-align: center;
+    font-size: xx-large;
+}
+
+h3 {
+    color:antiquewhite;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    font-size: x-large;
 }
 .percha {
     width: 30px;
-    
-
 }
 .logo {
-    width: 250px;
+    width: 300px;
 }
 .home {
-    color: antiquewhite;
+    color: #fcb1fc;
     text-decoration: none;
-    padding: 0rem 1rem 0rem 1rem;
-   
-}
+    background-color: #292D3E;
+    border: 1px solid #fcb1fc;
+    border-radius: 4px;
+    padding: 0 15px;
+    cursor: pointer;
+    height:32px;
+    font-size:14px;
+    transition: all 0.2s ease-in-out;
+    }
+.home:hover {
+    box-shadow: 1px 1px white, 2px 2px white, 3px 3px white;
+    transform: translateX(-3px);
+    }
 .container {
     display: flex;
-    justify-content: space-between;
+    flex-flow: row wrap;
+    justify-content: space-around;
+  
+}
+.look {
+    height: 500px;
+    width: 400px;
+    object-fit: cover;
+}
+.fotos {
+    width: 90%;
+   
+}
+.evolucion {
+    width: 1000px;
+    height: 300px;
+    padding-left: 20%;
+
+}
+span {
+    font-weight: bold;
+}
+.cita {
+    font-size: xx-large;
+    color: antiquewhite;
+    text-align: center;
+}
+nav a:hover {
+    background-color:  #111111;
+    border-radius: 25%;
+
+}
+.estilo {
+    width: 40%;
+}
+.container1 {
+    display: flex; 
+}
+.item {
+	display: flex;
+   	text-align: center;
+}
+textarea {
+    width: 40%;
+    resize: none;
+    min-height: 100px;
+    min-width: 400px;
+    
+}
+.enviar {
+    background-color: grey;
+    width: 134px;
+    height: 44px;
+    border-radius: 50px;
+    color: white;
+    border: none;
+
+}
+.enviar a:hover {
+    background-color: black;
+}
+form {
+    display: block;
+    margin: auto;
+    width: 450px;
+    background: rgba(0, 0, 0, 0.2);
+    box-sizing: border-box;
+    border-radius: 7px;
+}
+.containerestilo {
+    display: block;
+    padding-left: 200px;
+
+}
+.slider {
+    display: block;
+
+    width: 1100px;
+    margin: auto;
+    margin-top: 20px;
+    position: relative;
 }
 
+.slider li {
+    list-style: none;
+    position: absolute;
+}
+
+.slider img {
+    margin: auto;
+    height: 100%;
+    width: 100%;
+    vertical-align: top;
+    opacity: 0;
+    visibility: hidden;
+}
+.slider input {
+    display: none;
+}
+.slider label {
+    background-color: #000;
+    bottom: 10px;
+    cursor: pointer;
+    display: block;
+    height: 10px;
+    position: absolute;
+    width: 10px;
+    z-index: 10;
+}
+
+.slider li:nth-child(1) label {
+    left: 10px;
+}
+
+.slider li:nth-child(2) label {
+    left: 40px;
+}
+
+.slider li:nth-child(3) label {
+    left: 70px;
+}
+.slider li:nth-child(4) label {
+    left: 100px;
+}
+.slider li:nth-child(5) label {
+    left: 130px;
+}
+.slider li input:checked ~ img {
+    opacity: 1;
+    visibility: visible;
+    z-index: 10;
+}
