--- a/style.css
+++ b/style.css
@@ -22,23 +22,28 @@ body header {
     flex-direction: row;
     justify-content: space-around;
     padding: 2rem 3rem 0rem 3rem;
-
 }
 
-h1 {
+h1, p, li {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: rgb(16, 55, 36)
+}
+
+ h1 {   
     font-size: 5rem;
     color: rgb(16, 55, 36)
 }
 
-h2 {
+h2, h3 {
     text-align: center;
     color: rgb(16, 55, 36)
 }
 
-h3 {
+/*h3 {
+    text-align: center;
     color: rgb(16, 55, 36)
 }
+*/
 
 p { text-align: justify;
     color: rgb(16, 55, 36)
@@ -76,18 +81,39 @@ p { text-align: justify;
     background-color: rgb(215, 186, 186)/* rgb(243, 221, 206)*/;
    }
 
-   .card:hover{
+.card:hover{
     background-color: rgb(199, 143, 145) /*rgb(230, 163, 129)*/;
    }
 
 .card p, .card h3{
-    padding:10px}
+    padding:10px;
+
+}
 
 .card>img{ 
     width: 100%;
+    height: 270px;
     border-radius: 10px;
     padding: 10px;
 }
+
+/*contacto*/
+#users{
+    width: 8%;
+    border-radius: 50px;
+}
+
+#picture {
+    height: auto;
+    border-radius: 50px;
+}
+
+span>p{
+    text-align: center;
+    letter-spacing: 2px;
+    color: rgb(16, 55, 36)
+}
+
 
 /* footer */
 footer{
