--- a/style.css
+++ b/style.css
@@ -207,3 +207,109 @@ form {
     visibility: visible;
     z-index: 10;
 }
+
+
+.card {
+    width: 300px;
+    border: 1px solid grey;
+    border-radius: 10px;
+    padding-bottom: 10px;
+    background-color: rgb(215, 186, 186)/* rgb(243, 221, 206)*/;
+   }
+
+.card:hover{
+    background-color: rgb(199, 143, 145) /*rgb(230, 163, 129)*/;
+   }
+
+.card p, .card h3{
+    padding:10px;
+}
+
+.card>img{ 
+    width: 100%;
+    height: 270px;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+
+/*contacto*/
+#users{
+    width: 100px;
+    border-radius: 50px;
+}
+
+#picture {
+    height: auto;
+    border-radius: 50px;
+}
+
+span>p{
+    text-align: center;
+    letter-spacing: 2px;
+    color: rgb(16, 55, 36)
+}
+
+.warnings{
+    width: 200px;
+    color:rgb(16, 55, 36)
+}
+
+.containerformulario{
+    display: flex;
+    display: block;
+    margin: auto;
+    padding-right: 30px;
+    width: 450px;
+    background: rgba(0, 0, 0, 0.2);
+    box-sizing: border-box;
+    border-radius: 7px;
+}
+.formbutton, .resetbutton {
+    background-color: grey;
+    width: 134px;
+    height: 44px;
+    border-radius: 50px;
+    color: white;
+    border: none;
+
+}
+
+.formbutton:hover {
+    background-color: rgb(57, 54, 54);
+}
+
+.resetbutton:hover {
+    background-color: rgb(57, 54, 54);
+}
+
+/* footer */
+footer{
+    
+}
+
+
+@media screen and (max-width: 640px){
+#logo2 {
+    width: 100px;
+    }    
+.contacto{
+    font-size: 2rem;
+}
+}
+@media screen and (min-width:640px) and (max-width:1280px) {
+    #logo {
+        width: 200px;
+    }
+    .contacto{
+        font-size: 40px;
+    }
+}
+@media screen and (min-width:1280px){
+    #logo {
+        width: 300px;
+    }
+    .contacto{
+        font-size: 50px;
+    }
+}
